syntax = "proto3";

package api.transport.v1;
option go_package = "api/transport/v1;v1";

import "google/protobuf/any.proto";

enum Code {
  OK = 0;
  // define other response codes in ext file
}

// BaseResponse use as define response code and message
message BaseResponse {
  Code code = 1;
  string msg = 2;
  Meta meta = 3;
}


message PbResponse {
  Code code = 1;
  string msg = 2;
  Meta meta = 3;
  google.protobuf.Any data = 4;
}

message Meta {
  string request_id = 1;
  int32 total = 2;
  optional Pagination pagination = 3;
  map<string, string> extra = 4;
}

message Pagination {
  int32 page = 1;
  int32 page_size = 2;
}